--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "name": "wa_bot_group",
   "scripts": {
-    "start": "lerna run start:dev"
+    "start": "lerna run start:dev --stream"
   },
   "workspaces": [
     "packages/*"
