--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -33,7 +33,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^7.1.1",
     "socket.io": "^4.6.1",
-    "whatsapp-web.js": "^1.19.5"
+    "whatsapp-web.js": "^1.20.0",
+    "wwebjs-mongo": "^1.1.0"
   }
 }
